dinoco_docs/src/content/v0.0.1/ru-ru/orm/find-and-update.mdx
export const title = "find_and_update";

# find_and_update

Используется для поиска одной записи, применения атомарных обновлений в базе данных и возврата обновленного элемента.

---

## Что можно сделать

- `.cond(...)`
- `.update(...)`
- `.execute(&client)`

## Описание методов

- `.cond(...)`: определяет, какая запись должна быть найдена.
- `.update(...)`: применяет атомарную операцию к полю модели.
- `.execute(&client)`: выполняет обновление и возвращает обновленную запись.

## Возвращаемое значение

Возвращаемое значение `find_and_update`:

```rust
DinocoResult<M>
```

## Базовый пример

```rust
let task = dinoco::find_and_update::<Task>()
    .cond(|x| x.id.eq(task_id.clone()))
    .update(|x| x.status.set(TaskStatus::REVIEW))
    .execute(&client)
    .await?;
```

## Доступные операции в `ModelUpdate`

- `set(value)`
- `increment(value)`
- `decrement(value)`
- `multiply(value)`
- `division(value)`

## Примечания

- Обновление выполняется в одном `UPDATE` запросе.
- Если ни одна строка не соответствует условию, возвращается `DinocoError::RecordNotFound`.
- DSL обновления не раскрывает отношения.
- В настоящее время рабочий процесс поддерживает простые первичные ключи для поиска и возврата обновленной записи.

## Следующие шаги

- [**`update::<M>()`**](/v0.0.1/orm/update): традиционное обновление.
- [**`update_many::<M>()`**](/v0.0.1/orm/update-many): пакетное обновление.
