dinoco_docs/src/content/v0.0.2/ru-ru/orm/find-and-update.mdx
export const title = 'find_and_update';

# find_and_update

Используется для поиска одной записи, применения атомарных обновлений в базе данных и возврата обновленного элемента.

---

## Что вы можете сделать

- `.cond(...)`: определяет, какая запись будет найдена.
- `.update(...)`: применяет атомарную операцию к полю модели.
- `.execute(&client)`: выполняет обновление и возвращает обновленную запись.

## Возвращаемое значение

Возвращаемое значение `find_and_update` это:

```rust
DinocoResult<M>
```

## Базовый пример

```rust
let task = dinoco::find_and_update::<Task>()
    .cond(|x| x.id.eq(task_id.clone()))
    .update(|x| x.status.set(TaskStatus::REVIEW))
    .execute(&client)
    .await?;
```

## Пример с воркером

```rust
use database::*;

let _worker = workers()
    .on::<Task, _, _>("task.reviewed", |job| async move {
        // Задача обновлена до
        println!("Task atualizada para {:?}", job.data.status);
        job.success();
    })
    .run()
    .await?;

let task = dinoco::find_and_update::<Task>()
    .cond(|x| x.id.eq(task_id.clone()))
    .update(|x| x.status.set(TaskStatus::REVIEW))
    .enqueue("task.reviewed")
    .execute(&client)
    .await?;
```

Подробнее о воркерах см. в [**`queues`**](/v0.0.2/orm/queues).

## Доступные операции в `ModelUpdate`

- `set(value)`
- `increment(value)`
- `decrement(value)`
- `multiply(value)`
- `division(value)`

## Примечания

- Обновление выполняется в одном `UPDATE`.
- Если ни одна строка не соответствует условию, будет возвращена ошибка `DinocoError::RecordNotFound`.
- DSL обновления не раскрывает отношения.
- В настоящее время поток поддерживает простой первичный ключ для поиска и возврата обновленной записи.

## Следующие шаги

- [**`update::&lt;M&gt;()`**](/v0.0.1/orm/update): традиционное обновление.
- [**`update_many::&lt;M&gt;()`**](/v0.0.1/orm/update-many): пакетное обновление.
